# gradescope-data-utils

./: LICENSE  README.md  pyproject.toml
gradescope_utils/: assigments.py  auth.py  config.py  roster.py
