[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gradescope_utils"
version = "0.1.0"
description = "A Python package to automate the extraction of student information for research."
readme = "README.md"
authors = [
  { name = "Conor Jones", email = "conjon@unc.edu" }
]
license = {text = "MIT"}
requires-python = ">=3.7"
dependencies = [
  "selenium",
  "pandas",
  "requests"
]
